# slicerSTRT

./: .gitignore  AGENTS.md  README.md  README_SLIAFlow_Build.md  README_Stratum_Slicer_Build.md  pyproject.toml  pyrightconfig.json
.agents/: code_style.md  review_checklist.md  slicer_workflow.md  task_protocol.md
.ai/policies/: algorithm-boundary-policy.md  code-quality.md  dependency-policy.md  git-workflow.md  mcp-policy.md  medical-data-policy.md
.ai/templates/: adr-template.md  review-template.md  task-template.md
.ai/workflows/: begin-task.md  implementation-workflow.md  manual-verification-workflow.md  planning-workflow.md  review-workflow.md  task-lifecycle.md
config/: local.example.json
docs/codex/: codex_workflow.md  context_handoff.md  context_management.md  instructions.md
docs/development/: coding_standards.md  project_structure.md  sandbox_roadmap.md  testing_strategy.md
docs/knowledge/: README.md
docs/slicer/: scripted_module_structure.md  slicer_knowledge_index.md  slicer_module_architecture.md
extensions/SLIAFlow/: CMakeLists.txt
extensions/SLIAFlow/SLIAFlow/: CMakeLists.txt  SLIAFlow.py
extensions/SLIAFlow/SLIAFlow/Resources/: requirements.txt
extensions/SLIAFlow/SLIAFlow/Resources/UI/: SLIAFlow.ui
extensions/SLIAFlow/SLIAFlow/SLIAFlowLib/: SLIAFlowLogic.py  SLIAFlowParameterNode.py  SLIAFlowTest.py  SLIAFlowWidget.py  __init__.py
extensions/SLIAFlow/SLIAFlow/Testing/Python/: CMakeLists.txt  SLIAFlowModuleTest.py
tasks/: phase_2a_check_environment.md  phase_2b_volume_metadata.md  phase_2c_template_cleanup.md
(+30 files in other folders)
